<resources>
    <string name="app_name">Inventory App</string>

    <string name="table_name">books</string>

    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>

    <string name="string_empty_view_text_title">The library is empty!</string>
    <string name="string_empty_view_text_sub">Start by adding a book!</string>

    <string name="string_add_a_book">Add a book</string>
    <string name="string_edit_a_book">Edit book</string>
    <string name="book_details">Book details</string>
    <string name="string_no_book_left">There are no books left</string>
    <string name="string_sold_book">Book sold</string>
    <string name="add_book">Book added</string>

    <string name="error_deleting">Error deleting the book!</string>
    <string name="book_deleted">Book deleted!</string>

    <string name="error_saving">Error with saving the book!</string>
    <string name="book_saved">Book saved!</string>

    <string name="error_updating">Error updating the book!</string>
    <string name="book_updated">Book updated!</string>

    <string name="book_delete_dialog">Delete this book?</string>
    <string name="delete_dialog">Delete</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="all_books_delete_dialog">Delete all the books?</string>

    <string name="discard_changes">Do you want to discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    <string name="name_needed_toast">Book name is required</string>
    <string name="supplier_needed_toast">Supplier name is required</string>
    <string name="phone_needed_toast">Supplier phone is required</string>
    <string name="exit_editor">Go to main screen</string>

    <string name="editor_book_name">Book name</string>
    <string name="editor_book_name_hint">Input Book name</string>
    <string name="editor_book_quantity">Quantity</string>
    <string name="editor_book_quantity_hint">Input Quantity</string>
    <string name="editor_book_price">Price</string>
    <string name="editor_book_price_hint">Input Price</string>
    <string name="editor_supplier_name">Supplier Name</string>
    <string name="editor_supplier_name_hint">Input Supplier Name</string>
    <string name="editor_supplier_phone">Supplier Phone Number</string>
    <string name="editor_supplier_phone_hint">Input Supplier Phone</string>

    <string name="no_phone_number">There is no phone number!</string>
</resources>

