<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditorActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/floating_button_padding"
        android:layout_marginStart="@dimen/floating_button_padding"
        android:layout_marginTop="@dimen/floating_button_padding"
        android:text="@string/editor_book_name"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/edit_book_name"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/empty_view_padding"
        android:layout_marginLeft="@dimen/empty_view_padding"
        android:layout_marginRight="@dimen/empty_view_padding"
        android:layout_marginStart="@dimen/empty_view_padding"
        android:hint="@string/editor_book_name_hint"
        android:inputType="textCapSentences"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/floating_button_padding"
        android:layout_marginStart="@dimen/floating_button_padding"
        android:layout_marginTop="@dimen/floating_button_padding"
        android:text="@string/editor_book_quantity"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/edit_book_quantity"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/empty_view_padding"
        android:layout_marginLeft="@dimen/empty_view_padding"
        android:layout_marginRight="@dimen/empty_view_padding"
        android:layout_marginStart="@dimen/empty_view_padding"
        android:ems="10"
        android:hint="@string/editor_book_quantity_hint"
        android:inputType="number"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/floating_button_padding"
        android:layout_marginStart="@dimen/floating_button_padding"
        android:layout_marginTop="@dimen/floating_button_padding"
        android:text="@string/editor_book_price"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <EditText
        android:id="@+id/edit_book_price"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/empty_view_padding"
        android:layout_marginLeft="@dimen/empty_view_padding"
        android:layout_marginRight="@dimen/empty_view_padding"
        android:layout_marginStart="@dimen/empty_view_padding"
        android:ems="10"
        android:hint="@string/editor_book_price_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/floating_button_padding"
        android:layout_marginStart="@dimen/floating_button_padding"
        android:layout_marginTop="@dimen/floating_button_padding"
        android:text="@string/editor_supplier_name"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/edit_book_supplier_name"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/empty_view_padding"
        android:layout_marginLeft="@dimen/empty_view_padding"
        android:layout_marginRight="@dimen/empty_view_padding"
        android:layout_marginStart="@dimen/empty_view_padding"
        android:ems="10"
        android:hint="@string/editor_supplier_name_hint"
        android:inputType="textCapWords"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/floating_button_padding"
        android:layout_marginStart="@dimen/floating_button_padding"
        android:layout_marginTop="@dimen/floating_button_padding"
        android:text="@string/editor_supplier_phone"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <EditText
        android:id="@+id/edit_book_supplier_phone"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/empty_view_padding"
        android:layout_marginLeft="@dimen/empty_view_padding"
        android:layout_marginRight="@dimen/empty_view_padding"
        android:layout_marginStart="@dimen/empty_view_padding"
        android:ems="10"
        android:hint="@string/editor_supplier_phone_hint"
        android:inputType="phone"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.44" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline5" />

</android.support.constraint.ConstraintLayout>